add endpoints to find books by isbn and title and let the find all be pageable
