# src/main/java/com/example/simplelibrary/domains/book/BookController.java
@@ -4,10 +4,12 @@ import com.example.simplelibrary.domains.book.dto.BookRequestDto;
 import com.example.simplelibrary.domains.book.dto.BookResponseDto;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -17,13 +19,29 @@ public class BookController {
     private final BookService bookService;
 
     @GetMapping
-    public ResponseEntity<List<BookResponseDto>> findAll() {
-        return ResponseEntity.ok(bookService.findAll());
+    public ResponseEntity<Page<BookResponseDto>> findAll(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            @RequestParam(defaultValue = "title") String sortBy) {
+
+        PageRequest pageRequest = PageRequest.of(page, size, Sort.by(sortBy));
+
+        return ResponseEntity.ok(bookService.findAll(pageRequest));
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<BookResponseDto> findById(@PathVariable UUID id) {
         return ResponseEntity.ok(bookService.findById(id));
+    }
+
+    @GetMapping("/isbn/{isbn}")
+    public ResponseEntity<BookResponseDto> findByIsbn(@PathVariable String isbn) {
+        return ResponseEntity.ok(bookService.findByIsbn(isbn));
+    }
+
+    @GetMapping("/title/{title}")
+    public ResponseEntity<BookResponseDto> findByTitle(@PathVariable String title) {
+        return ResponseEntity.ok(bookService.findByTitle(title));
     }
 
     @PostMapping
